[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/world.gd" type="Script" id=1]
[ext_resource path="res://scenes/tilemap.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/ui/buttons_always_shown.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/ui/game_ui.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/audio/walk.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/audio/level_up.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/audio/select.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/audio/trolley_crash.wav" type="AudioStream" id=9]
[ext_resource path="res://scenes/audio_controller.gd" type="Script" id=10]
[ext_resource path="res://assets/audio/click.wav" type="AudioStream" id=11]
[ext_resource path="res://scenes/ui/pause.tscn" type="PackedScene" id=12]

[node name="World" type="Node2D"]
script = ExtResource( 1 )

[node name="ScaledView" type="Node2D" parent="."]

[node name="TileMap" parent="ScaledView" instance=ExtResource( 2 )]

[node name="Player" parent="ScaledView" instance=ExtResource( 3 )]

[node name="Trolleys" type="Node2D" parent="ScaledView"]

[node name="LevelStartTrolleyTimer" type="Timer" parent="."]
one_shot = true

[node name="LevelCompletedTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AudioController" type="Node2D" parent="."]
script = ExtResource( 10 )

[node name="WalkPlayer" type="AudioStreamPlayer" parent="AudioController"]
stream = ExtResource( 6 )

[node name="LevelUpPlayer" type="AudioStreamPlayer" parent="AudioController"]
stream = ExtResource( 7 )

[node name="TogglePlayer" type="AudioStreamPlayer" parent="AudioController"]
stream = ExtResource( 8 )
volume_db = -8.74

[node name="CrashPlayer" type="AudioStreamPlayer" parent="AudioController"]
stream = ExtResource( 9 )

[node name="ClickPlayer" type="AudioStreamPlayer" parent="AudioController"]
stream = ExtResource( 11 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="GameUI" parent="CanvasLayer" instance=ExtResource( 5 )]

[node name="ButtonsAlwaysShown" parent="CanvasLayer" instance=ExtResource( 4 )]

[node name="Pause" parent="CanvasLayer" instance=ExtResource( 12 )]
pause_mode = 2
unique_name_in_owner = true
visible = false

[connection signal="timeout" from="LevelStartTrolleyTimer" to="." method="_on_Any_trolley_created_later"]
